<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Formula1Fy</string>
    <string name="drivers">Drivers</string>
    <string name="constructors">Constructors</string>
    <string name="constructors_image">Constructors Image</string>
    <string name="driver_image">DriverImage</string>
    <string name="desc">Drivers | Constructors | Stats</string>
    <string name="formula1fy" tools:ignore="Typos">Formula1Fy</string>
    <string name="driver_standings">Driver Standings</string>
    <string name="no_data_exists">No Data Exists</string>
    <string name="menu_driver">Driver</string>
    <string name="menu_home">Home</string>
    <string name="menu_constructor">Constructor</string>
    <string name="menu_schedule">Schedule</string>
    <string name="home_latest_results">Latest Results</string>
    <string name="home_next_race">Next Race</string>
    <string name="home_driver_standings">Driver Standings</string>
    <string name="home_constructor_standings">Constructor Standings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="driver">Driver</string>
    <string name="standings">Standings</string>

    <string name="offline_mode">Data may not be updated to the latest. Would you like to proceed?</string>
    <string name="no_internet">No internet connection</string>
    <string name="unable_to_download">Unable to download the data. Please connect to the Internet</string>
    <string name="ok">OK</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="lets_go">Lets Go!</string>
    <string name="constructor">Constructor</string>
    <string name="total_wins_in_2023_season">Total wins in 2023 season</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nationality">Nationality</string>

</resources>