<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/latestResultLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_latest_results"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/latestResultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/latestResultLbl"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/nextRaceLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_next_race"
            android:layout_below="@+id/latestResultView"
            android:textSize="16sp"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nextRaceCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nextRaceLbl"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_driver_standings"
            android:fontFamily="@font/regular"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/driverStandingsLbl"
            android:layout_below="@+id/nextRaceCard"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/driverRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driverStandingsLbl"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/home_constructor_standings"
            android:id="@+id/constructorStandingsLbl"
            android:layout_below="@+id/driverRecyclerView"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/constructorRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/constructorStandingsLbl"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>




    </RelativeLayout>
    

</ScrollView>

